syntax = "proto3";
package job;

///////////////////////////////////////////////////////////////////////////////

service Application {
    rpc createApplication (ApplicationRequest) returns (GenericResponse);
}

message ApplicationRequest {
    int32 id = 1;
    string fullname = 2;
    bytes cv = 3;
    int64 timestamp = 15; // Less than 16 to reduce byte size
    
}

message GenericResponse {
    string message = 1;
    int32 timestamp = 2;
}

